@@ -26,7 +26,7 @@ deps =
         py27-django111: python-memcached
         py36-django{111,20,21,22}: python3-memcached
         py37-django{111,20,21,22}: python3-memcached
-        # py27-django18: pudb
+        # py27-django111: pudb
         requests
         polib>=1.1.0
         six
