@@ -6,6 +6,7 @@ Version 0.9.3 (unreleased)
 --------------------------
 * Added a tooltip to explain fuzzy entries (#206)
 * New ROSETTA_LANGUAGES setting allows for translating languages which are not yet in LANGUAGES (#219)
+* Fix for duplicate PO files listed on case insensitive filesystems (#47, #52, #218, thanks @malkstar)
 
 
 Version 0.9.2
